ukbg/theme/static/bootstrap-3.3.5/less/siguv-responsive-old.less
/* ... */
@media (max-width: 768px) {
  .lupegrau {
    top: -70px;
  }
}
//@media (min-width: 980px) {
//	.container {
//    	margin: 0 auto;
//    	width: 100%;
//		}
//}
 @media print {
  .offcanvas,
  .portal-siteactions,
  #site-action,
  #document-action-rss,
  #document-action-print,
  #document-action-sendto,
  #document-action-contact,
  #portal-column-two,
  #portal-column-one,
  .btn-navbar,
  a.brand,
  .medialinks {display:none !important;}
  .footer li {line-height: 12px;}
  #wrap section {
    border-bottom: 0;
  }
  #document-action-webcode {
  padding-left: 0;
  margin:0;
  float:right;
  }
  h2, h3 {
    font-size: 14px !important;
  }
  li.captioned {
    width:auto !important;
    border:0;
  }
  @page {
    margin: 2cm 1.5cm;
  }
  .table {
   border-collapse: collapse !important;
   }
   a[href]:after {
      content: "";
   }
}

